--- a/spotify/syncpad.css
+++ b/spotify/syncpad.css
@@ -29,3 +29,17 @@
 	position:relative;
 	top:1px;
 }
+
+#logo {
+  background: url(logo.png) center center no-repeat;
+  border-radius: 4px;
+  -webkit-transform: rotate(-15deg);
+  margin: 0 auto;
+  background-color: #fff;
+  width: 111px;
+  margin-top: 40px;
+  margin-bottom: -20px;
+  height: 70px;
+  box-shadow: 1px 2px 2px rgba(0,0,0,0.05);
+}
+
